<resources>
    <string name="app_name">Batikku</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="ScanBatik">Scan Batik</string>
    <string name="ListBatik">List Batik</string>
    <string name="namaBatik">Nama Batik</string>
    <string name="asalBatik">Asal Batik</string>
    <string name="descBatik">Deskripsi Batik</string>
    <string name="searchView">Search Here ...</string>
    <string name="image_preview">Image Preview</string>
    <string name="button_cam">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="uname">"        Username atau email"</string>
    <string name="upass">"        Password"</string>
    <string name="rpass">"        Repeat Password"</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="detButton">Detail</string>
    <string name="NotRegistered">Not Registered Yet, Sign Up!</string>
    <string name="AlrRegistered">Already Registred , Sign In !</string>

</resources>